# finance_terminal

./: LICENSE  setup.cfg
.github/workflows/: tests.yml
tests/: test_account.py
